[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "potts"
version = "0.0.1"
authors = [
  { name="Roy Larsen", email="roy.larsen@mobileheartbeat.com" },
]
description = "Personal Assistant tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/mhroylarsen/potts"
"Bug Tracker" = "https://github.com/mhroylarsen/potts/issues"

[project.scripts]
potts = "potts.cli.main:cli"
